Jun 24, 2025
  CL ontology: updated to release v2025-06-20

May 20, 2025
  EFO loader: fixed file parser to properly translate EFO:efo:EFO_xxxxxxx accessions

Apr 22, 2025
  EFO xref loader: improved qc to skip loading of duplicates

Apr 15, 2025
  CL ontology: updated to release v2025-04-10

Apr 09, 2025
  DO ontology loader: fixed parsing of some PMIDs

Feb 24, 2025
  OBA ontology: added loading of VT xrefs
  DO ontology loader: human friendly loading of definition xrefs

Feb 21, 2025
  added loading of OBA ontology

Feb 19, 2025
  added handling of several new synonym types for MP/HP ontologies

Feb 17, 2025
  CL ontology: updated to release v2025-02-13

Jan 31, 2025
  CL ontology: updated to release v2025-01-08

Dec 20, 2024
  DO synonym loader: updated to resolve obsolete terms

Nov 15, 2024
  GO taxon constrains: added handling of obsolete terms

Nov 12, 2024
  EfoXrefGenerator: fixed -- created synonyms should always have type set to 'xref'

Oct 28, 2024
  CL ontology: updated to release v2024-09-26

Aug 09, 2024
  loader: added security check to prevent processing (loading) of ontologies developed and maintained in RGD
          (CMO, MMO, XCO, PW, RS and RDO)

Aug 08, 2024
  SSSOMGenerator: added generation of RDO to MIM file

Jul 29, 2024
  added EfoXrefGenerator to generate reciprocal EFO xrefs for VT, MP, HP, CMP and RDO ontologies

Jul 25, 2024
  added SSOM TSV file validator
  draft version of SSSOM file generator

Jul 16, 2024
  CL ontology: updated to release v2024-07-10

Jul 08, 2024
  CL ontology: updated to release v2024-05-15
  CL ontology: improved loading of 'develops-from' relations

Jun 17, 2024
  patch to remove cyclic GO CC relationships

May 15, 2024
  TermStatsLoader: updating to include rgdvariant type for GWAS variant annotations

May 14, 2024
  OboFileCreator: 'primary_id' synonyms are exported as 'xref', not ad 'alt_id'
    also malformed accessions in 'xref' and 'alt_id' fields are no longer exported

Apr 11, 2024