@@ -23,7 +23,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-collections4:4.4'
+    implementation 'org.apache.commons:commons-collections4:4.5.0'
     implementation ('org.apache.commons:commons-dbcp2:2.13.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
@@ -31,7 +31,7 @@ dependencies {
     implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'org.apache.logging.log4j:log4j-core:2.25.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.25.1'
     implementation 'com.oracle.database.jdbc:ojdbc11:23.8.0.25.04'
     implementation 'org.springframework:spring-jdbc:6.2.8'
 
